--- a/grails-app/assets/stylesheets/bodhi.css
+++ b/grails-app/assets/stylesheets/bodhi.css
@@ -5,9 +5,10 @@
 
 body {
 	font-family: 'Roboto', sans-serif;
-	/*margin: 0;*/
+	margin: 0;
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQoU2Ps2ffLmIEIwAhSWOLEdpaQ2lGFeEOI6OABADvZJoK0b4dwAAAAAElFTkSuQmCC) repeat;
 }
 
-/**:focus {*/
-	/*outline: none;*/
-/*}*/
+*:focus {
+	outline: none;
+}
