--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -8,7 +8,7 @@
   background-color: #5C6BC0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   margin: 1em;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.25s cubic-bezier(.25,.8,.25,1);
   cursor: default;
   position: relative;
   min-height: 4em;
@@ -16,6 +16,7 @@
   @include modifier('selected') {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	background-color: #8E24AA;
+	transform: scale(1.01);
   }
 
   @include modifier('related') {
@@ -35,13 +36,14 @@
 	padding: 0;
 	cursor: auto;
 	position: absolute;
-	top: 5%;
-	left: 5%;
+	top: 1em;
+	left: 1em;
   }
 
   @include element('viewer') {
 	visibility: visible;
 	opacity: 1;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 
 	@include modifier('hidden') {
 	  visibility: hidden;
