--- a/grails-app/assets/stylesheets/scss/note-column.scss
+++ b/grails-app/assets/stylesheets/scss/note-column.scss
@@ -1,14 +1,26 @@
 @import 'bem';
 
 @include block('note-columns') {
-  display: flex;
+  position: fixed;
+  display: auto;
   width: 100%;
   height: 100vh;
-  flex-direction: row;
-  justify-content: center;
 
   @include element('column') {
-	width: 33%;
-	height: 100%;
+	float: left;
+	width: 33.333333%;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vw;
+	align-content: center;
+	position: relative;
+
+	//> :first-child {
+	//  margin-top: 50vh;
+	//}
+	//
+	//> :last-child {
+	//  margin-bottom: 50vh;
+	//}
   }
 }
