--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -1,17 +1,16 @@
 @import 'bem';
 
 @include block('note-pane') {
-
-  padding: 0.1em 1em 0.1em 1em;
+  padding: 1em;
   border-radius: 2px;
   color: white;
   background-color: #5C6BC0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  margin: 1em;
   transition: all 0.25s cubic-bezier(.25,.8,.25,1);
   cursor: default;
-  position: relative;
   min-height: 4em;
+  margin: 1em;
+  position: relative;
 
   @include modifier('selected') {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -29,15 +28,22 @@
   }
 
   @include element('editor') {
-	resize: none;
-	background-color: inherit;
-	color: inherit;
-	border: none;
-	padding: 0;
-	cursor: auto;
 	position: absolute;
-	top: 1em;
-	left: 1em;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	padding: 1em;
+
+	textarea {
+	  background-color: inherit;
+	  color: inherit;
+	  border: none;
+	  cursor: auto;
+	  resize: none;
+	  height: 100%;
+	  width: 100%;
+	}
   }
 
   @include element('viewer') {
@@ -47,7 +53,6 @@
 
 	@include modifier('hidden') {
 	  visibility: hidden;
-	  opacity: 0;
 	}
   }
 
