--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -1,5 +1,6 @@
 @import 'bem';
 
+/* note-pane */
 @include block('note-pane') {
   padding: 1em;
   border-radius: 2px;
@@ -7,26 +8,30 @@
   background-color: #5C6BC0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.25s cubic-bezier(.25,.8,.25,1);
-  cursor: default;
+  cursor: pointer;
   min-height: 4em;
-  margin: 1em;
+  margin: 2em;
   position: relative;
 
+  /* note-pane--selected */
   @include modifier('selected') {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	background-color: #8E24AA;
 	//transform: scale(1.005);
   }
 
+  /* note-pane--related */
   @include modifier('related') {
 	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	background-color: #7E57C2;
   }
 
+  /* note-pane--dirty */
   @include modifier('dirty') {
 	background-color: #D81B60;
   }
 
+  /* note-pane__editor */
   @include element('editor') {
 	position: absolute;
 	top: 0;
@@ -46,14 +51,30 @@
 	}
   }
 
+  /* note-pane__viewer */
   @include element('viewer') {
 	visibility: visible;
 	opacity: 1;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 
+	/* note-pane__viewer--hidden */
 	@include modifier('hidden') {
 	  visibility: hidden;
 	}
   }
 
+  /* note-pane__close-button */
+  @include element('close-button') {
+	position: absolute;
+	text-align: center;
+	line-height: 3em;
+	top: -1.5em;
+	right: -1.5em;
+	width: 3em;
+	height: 3em;
+	border-radius: 3em;
+	background-color: #CDDC39;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+  }
 }
