Scroll to related nodes on selection ("Flow Mode"?)

--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -10,7 +10,7 @@
   transition: all 0.25s cubic-bezier(.25,.8,.25,1);
   cursor: pointer;
   min-height: 4em;
-  margin: 2em;
+  margin: 0 1.5em 1.5em 1.5em;
   position: relative;
 
   /* note-pane--selected */
