--- a/grails-app/assets/stylesheets/bodhi.css
+++ b/grails-app/assets/stylesheets/bodhi.css
@@ -7,7 +7,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
-	background: #313134 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQoU2Ps2ffLmIEIwAhSWOLEdpaQ2lGFeEOI6OABADvZJoK0b4dwAAAAAElFTkSuQmCC) repeat;
+	background: #ECEFF1 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAIUlEQVQoU2Ps2ffLmIEIwAhSWOLEdpaQ2lGFeEOI6OABADvZJoK0b4dwAAAAAElFTkSuQmCC) repeat;
 }
 
 *:focus {
