--- a/grails-app/assets/stylesheets/scss/note-column.scss
+++ b/grails-app/assets/stylesheets/scss/note-column.scss
@@ -1,23 +1,38 @@
 @import 'bem';
+@import 'constants';
 
 /* note-columns */
 @include block('note-columns') {
-  position: fixed;
-  display: flex;
-  justify-content: space-around;
+  position: relative;
   width: 100vw;
   height: 100vh;
-  z-index: 10;
+  z-index: $z-app;
 
   /* note-columns__column */
   @include element('column') {
-	float: left;
-	width: 30%;
+
+	position: absolute;
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	position: relative;
-	z-index: 11;
+	width: 33.3333%;
+	box-sizing: border-box;
+	padding: 0 1em 0 1em;
+
+	/* column--level-1 */
+	@include modifier('level-1') {
+	  z-index: 1;
+	  left: 0;
+	}
+
+	/* column--level-2 */
+	@include modifier('level-2') {
+	  z-index: 2;
+	  left: 33.3333vw;
+	}
+
+	/* column--level-3 */
+	@include modifier('level-3') {
+	  z-index: 3;
+	  left: 66.6666vw;
+	}
   }
 }
