--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -18,7 +18,7 @@
   @include modifier('selected') {
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	background-color: #8E24AA;
-	//transform: scale(1.01);
+	transform: scale(1.01);
   }
 
   /* note-pane--related */
@@ -68,6 +68,11 @@
 	/* note-pane__viewer--hidden */
 	@include modifier('hidden') {
 	  visibility: hidden;
+	}
+
+	/* note-pane__viewer--preview */
+	@include modifier('preview') {
+
 	}
   }
 
