--- a/grails-app/assets/stylesheets/scss/constants.scss
+++ b/grails-app/assets/stylesheets/scss/constants.scss
@@ -9,6 +9,6 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
 
-$height-modal: 10;
+$z-modal: 10;
 $z-nav: 9;
 $z-app: 8;
