--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -1,10 +1,11 @@
 @import 'bem';
+@import 'constants';
 
 /* note-pane */
 @include block('note-pane') {
   padding: 1em;
   border-radius: 2px;
-  color: white;
+  color: $primary-color-text;
   background-color: #5C6BC0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.25s cubic-bezier(.25,.8,.25,1);
@@ -68,11 +69,6 @@
 	/* note-pane__viewer--hidden */
 	@include modifier('hidden') {
 	  visibility: hidden;
-	}
-
-	/* note-pane__viewer--preview */
-	@include modifier('preview') {
-
 	}
   }
 
