--- a/grails-app/assets/stylesheets/scss/note-column.scss
+++ b/grails-app/assets/stylesheets/scss/note-column.scss
@@ -7,6 +7,7 @@
   width: 100vw;
   height: 100vh;
   z-index: $z-app;
+  overflow: hidden;
 
   /* note-columns__column */
   @include element('column') {
