--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -9,7 +9,7 @@
   background-color: #5C6BC0;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.25s cubic-bezier(.25,.8,.25,1);
-  cursor: pointer;
+  cursor: default;
   min-height: 4em;
   margin-bottom:1.5em;
   position: relative;
@@ -17,6 +17,7 @@
 
   /* note-pane--selected */
   @include modifier('selected') {
+	cursor: auto;
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	background-color: #8E24AA;
 	//transform: scale(1.01);
@@ -66,6 +67,10 @@
 	  font-family: "Roboto Slab", serif;
 	}
 
+	a {
+	  color: $primary-color-text;
+	}
+
 	/* note-pane__viewer--hidden */
 	@include modifier('hidden') {
 	  visibility: hidden;
@@ -74,6 +79,7 @@
 
   /* note-pane__close-button */
   @include element('close-button') {
+	cursor: pointer;
 	position: absolute;
 	text-align: center;
 	line-height: 3em;
