Try an actual scrolling pane
Bad scroll perf (hitching, doesn't work on regular chrome but works in chromium?). Switching back to a css based scroll

--- a/grails-app/assets/stylesheets/bodhi.css
+++ b/grails-app/assets/stylesheets/bodhi.css
@@ -1,6 +1,7 @@
 /*
 *= require bodhi-mono
 *= require bodhi-serif
+*= require scroll-box
 *= require_tree scss
 *= require font-awesome/font-awesome
 */
