Update node deps. Fix some bugs

--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -52,8 +52,8 @@
 	  height: 100%;
 	  width: 100%;
 
-	  font-family: "Bodhi-Serif", serif;
-	  font-size: inherit;
+	  font-family: "Inconsolata", serif;
+	  font-size: 1.14em;
 	}
   }
 
@@ -64,7 +64,7 @@
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 
 	h1, h2, h3, h4, h5, h6 {
-	  font-family: "Roboto Slab", serif;
+	  font-family: "Merriweather", serif;
 	}
 
 	a {
