--- a/grails-app/assets/stylesheets/scss/nav.scss
+++ b/grails-app/assets/stylesheets/scss/nav.scss
@@ -15,13 +15,12 @@
   @include element('container') {
 	position: relative;
 	display: flex;
-	align-items: baseline;
+	align-items: center;
 	width: 100%;
-	height: 100%;
 	padding-top: 0.4em;
 
 	color: $primary-color-text;
-	font-family: Roboto Slab, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 
 	> *:first-child {
@@ -35,6 +34,8 @@
 	margin-left: 0.5em;
 	display: inline-block;
 	letter-spacing: 0.1em;
+	font-family: "Open Sans Condensed", serif;
+
   }
 
   /* nav-bar__username */
