Handle case where there are no nodes in a root. Add a button to create first node

--- a/grails-app/assets/stylesheets/scss/note-column.scss
+++ b/grails-app/assets/stylesheets/scss/note-column.scss
@@ -37,4 +37,14 @@
 	  left: 66.6666vw;
 	}
   }
+
+  /* note-columns__add-first-note */
+  @include element('add-first-note') {
+	position: absolute !important;
+	top: 0;
+	width: auto;
+	padding: 0 1em 0 1em !important;
+	margin-top: 1em;
+	cursor: pointer !important;
+  }
 }
