--- a/grails-app/assets/stylesheets/scss/nav.scss
+++ b/grails-app/assets/stylesheets/scss/nav.scss
@@ -13,6 +13,7 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
   display: flex;
+  flex-flow: row nowrap;
   align-items: center;
   color: $primary-color-text;
   font-family: 'Open Sans', sans-serif;
@@ -32,8 +33,8 @@
 	margin-left: 0.5em;
 	display: inline-block;
 	letter-spacing: 0.1em;
-	font-family: "Open Sans Condensed", serif;
-
+	font-family: "Merriweather", serif;
+	white-space: nowrap;
   }
 
   /* nav-bar__modal-trigger */
