--- a/grails-app/assets/stylesheets/scss/root-picker.scss
+++ b/grails-app/assets/stylesheets/scss/root-picker.scss
@@ -4,7 +4,7 @@
 /* root-picker */
 @include block('root-picker') {
 
-  margin-left: 4em;
+  margin-left: 3em;
   font-size: 1.2em;
 
   .fa {
@@ -26,6 +26,16 @@
 	font-size: .9em;
 	color: $divider-color;
 	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	max-width: 35vw;
+	display: inline-block;
+	box-sizing: border-box;
+	margin-bottom: -0.2em;
+
+	@media (max-width: 700px) {
+	  display: none;
+	}
   }
 
   /* root-picker__root-selection-last-update */
