--- a/grails-app/assets/stylesheets/scss/nav.scss
+++ b/grails-app/assets/stylesheets/scss/nav.scss
@@ -9,7 +9,7 @@
   z-index: $z-nav;
   width: 100vw;
 
-  background: linear-gradient(135deg, #455a64 8em, $nav-color 8em);
+  background: linear-gradient(135deg, #455a64 7.5em, $nav-color 7.5em);
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
   display: flex;
@@ -18,6 +18,9 @@
   color: $primary-color-text;
   font-family: 'Open Sans', sans-serif;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+
+  user-select: none;
+  cursor: default;
 
   > *:first-child {
 	margin-left: 1em;
@@ -32,9 +35,14 @@
 	font-size: 1.4em;
 	margin-left: 0.5em;
 	display: inline-block;
-	letter-spacing: 0.1em;
+	//letter-spacing: 0.1em;
 	font-family: "Merriweather", serif;
 	white-space: nowrap;
+
+	.fa {
+	  margin-left: .2em;
+	  color: #CDDC27;
+	}
   }
 
   /* nav-bar__modal-trigger */
