--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -18,20 +18,54 @@
   /* note-pane--selected */
   @include modifier('selected') {
 	cursor: text;
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	//box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	background-color: #8E24AA;
-	//transform: scale(1.01);
   }
 
   /* note-pane--related */
   @include modifier('related') {
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	//box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 	background-color: #7E57C2;
   }
 
   /* note-pane--dirty */
   @include modifier('dirty') {
 	background-color: #D81B60;
+  }
+
+  /* note-pane--highlight-up */
+  @include modifier('move-before') {
+	margin-top: 6em;
+
+	&::before {
+	  content: '';
+	  position: absolute;
+	  width: 100%;
+	  height: 4px;
+	  top: -3em;
+	  left: 0;
+	  border-top: 2px solid #D81B60;
+	}
+  }
+
+  /* note-pane--highlight-down */
+  @include modifier('move-after') {
+	margin-bottom: 6em;
+
+	&::after {
+	  content: '';
+	  position: absolute;
+	  width: 100%;
+	  height: 4px;
+	  bottom: -3em;
+	  left: 0;
+	  border-top: 2px solid #D81B60;
+	}
+  }
+
+  /* note-pane--moving */
+  @include modifier('moving') {
+	opacity: 0.5;
   }
 
   /* note-pane__editor */
