Better move mode indicators

--- a/grails-app/assets/stylesheets/scss/constants.scss
+++ b/grails-app/assets/stylesheets/scss/constants.scss
@@ -10,6 +10,8 @@ $divider-color:			#BDBDBD;
 $nav-color: 			#607D8B;
 
 $nav-height: 3em;
+$note-pane-min-height: 5em;
+$move-gap: 40px;
 
 $z-modal: 10;
 $z-nav: 9;
