--- a/grails-app/assets/stylesheets/scss/note-column.scss
+++ b/grails-app/assets/stylesheets/scss/note-column.scss
@@ -38,6 +38,19 @@
 	}
   }
 
+  /* note-columns__note-group */
+  @include element('note-group') {
+	margin: $note-pane-min-height 0 $note-pane-min-height 0;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	border-radius: 3px;
+	opacity: 0.6;
+
+	/* note-columns__note-group--related */
+	@include modifier('related') {
+	  opacity: 1;
+	}
+  }
+
   /* note-columns__add-first-note */
   @include element('add-first-note') {
 	position: absolute !important;
