--- a/grails-app/assets/stylesheets/scss/note-pane.scss
+++ b/grails-app/assets/stylesheets/scss/note-pane.scss
@@ -59,7 +59,7 @@
 	  height: $move-gap + 1;
 	  top: -$move-gap - 4;
 	  left: -3px;
-	  border: dashed 3px $accent-color;
+	  border: dotted 3px $accent-color;
 	  box-sizing: border-box;
 	  text-align: center;
 	}
@@ -75,10 +75,10 @@
 	  color: $accent-color;
 	  position: absolute;
 	  width: 100%;
-	  height: $move-gap + 1;
-	  bottom: -$move-gap - 10;
+	  height: $move-gap - 5;
+	  bottom: -$move-gap - 1;
 	  left: -3px;
-	  border: dashed 3px $accent-color;
+	  border: dotted 3px $accent-color;
 	  //box-sizing: border-box;
 	  text-align: center;
 	}
@@ -86,7 +86,7 @@
 
   /* note-pane--moving */
   @include modifier('moving') {
-	border: dashed 3px $accent-color;
+	border: dotted 3px $accent-color;
   }
 
   /* note-pane__editor */
