--- a/grails-app/assets/stylesheets/scss/constants.scss
+++ b/grails-app/assets/stylesheets/scss/constants.scss
@@ -8,11 +8,13 @@ $primary-text-color:	#212121;
 $secondary-text-color:	#757575;
 $divider-color:			#BDBDBD;
 $nav-color: 			#607D8B;
+$nav-color-accent:		#455a64;
 
 $nav-height: 3em;
 $note-pane-min-height: 5em;
 $move-gap: 40px;
 
-$z-modal: 10;
-$z-nav: 9;
 $z-app: 1;
+$z-nav: 3;
+$z-modal-background: 2;
+$z-modal-dialog: 4;
