--- a/grails-app/assets/stylesheets/scss/root-picker.scss
+++ b/grails-app/assets/stylesheets/scss/root-picker.scss
@@ -38,10 +38,61 @@
 	}
   }
 
+  /* root-picker__create-new */
+  @include element('create-new') {
+	cursor: pointer;
+  }
+
   /* root-picker__root-selection-last-update */
   @include element('root-selection-last-update') {
 	font-size: .6em;
 	margin-left: .5em;
 	color: $divider-color;
   }
+}
+
+/* root-picker-modal */
+@include block('root-picker-modal') {
+
+  /* root-picker-modal__header */
+  @include element('header') {
+	border-bottom: 1px solid $divider-color;
+  }
+
+  /* root-picker-modal__close */
+  @include element('close') {
+	cursor: pointer;
+	float: right;
+  }
+
+  /* root-picker-modal__input */
+  @include element('input') {
+	display: block;
+	width: 100%;
+	border-radius: 2px;
+	border: none;
+	background-color: $nav-color-accent;
+	padding: 0.3em;
+	margin-top: 1em;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	color: $primary-color-text;
+	box-sizing: border-box;
+	font-size: 1.1em;
+  }
+
+  /* root-picker-modal__submit */
+  @include element('submit') {
+	background-color: $accent-color;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	border-radius: 2px;
+	display: inline-block;
+	padding: 0.25em 0.5em;
+	margin-top: 1em;
+	cursor: pointer;
+
+	&:active {
+	  background-color: #FF6681;
+	}
+  }
+  
 }
