Add a validation message for new root

--- a/grails-app/assets/stylesheets/scss/root-picker.scss
+++ b/grails-app/assets/stylesheets/scss/root-picker.scss
@@ -94,5 +94,11 @@
 	  background-color: #FF6681;
 	}
   }
+
+  /* root-picker-modal__error */
+  @include element('error') {
+	display: inline-block;
+	margin-left: 1em;
+  }
   
 }
